<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_courses" />

        <item
            android:id="@+id/nav_recent_notes"
            android:icon="@drawable/ic_menu_view"
            android:title="Recently Viewed Notes" />

        <item android:title="Communicate">

            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />

                <item
                    android:id="@+id/nav_how_many"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="How Many" />
            </menu>
        </item>
    </group>
</menu>
